# job_agent

./: .gitignore  main.py  pyproject.toml  state.py
agents/jobagent/: __init__.py  jobagent.py
dataupload/: __init__.py  database.py  moreinfo.py  resumeInfoextraction.py  resumeUpload.py  resume_pipeline.py  resumevectorstore.py
jobprocessing_pipeline/: __init__.py
jobprocessing_pipeline/processing_pipeline_tools/: __init__.py  query_generator.py
jobprocessing_pipeline/processing_pipeline_tools/scrapping_tools/: __init__.py  google_jobs_scrapper.py  indeed_job_Scraper.py
